fix webpack reporter text overflow issue

--- a/packages/electrode-webpack-reporter/src/client/styles/base.css
+++ b/packages/electrode-webpack-reporter/src/client/styles/base.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -20,10 +20,10 @@ body {
     font-family: Gotham-Rounded-Book;
     src: url("./fonts/Gotham-Rounded-Book.ttf");
 }*/
-.navbar { 
+.navbar {
   width: 100%;
   background-color: #00294b;
-  margin-bottom: 30px; 
+  margin-bottom: 30px;
   display: inline-flex;
   height: 90px;
 }
@@ -77,6 +77,9 @@ body {
   background: black;
   color: gray;
   padding: 10px;
+}
+
+.legacy pre {
   white-space: pre-wrap;
 }
 
@@ -84,7 +87,13 @@ body {
   border-radius: 2px;
   box-shadow: 0 19px 38px 0 rgba(0, 0, 0, 0.3), 0 15px 12px 0 rgba(0, 0, 0, 0.22);
   border-width: 0.5px;
-  border-image-source: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.4) 5%, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0));
+  border-image-source: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0.4) 5%,
+    rgba(255, 255, 255, 0) 20%,
+    rgba(255, 255, 255, 0)
+  );
   border-image-slice: 1;
   margin-bottom: 20px;
   width: 75%;
@@ -156,4 +165,3 @@ body {
   padding: 5px;
   background-color: lightgrey;
 }
-
